Fix emoji spacing

--- a/less/index.less
+++ b/less/index.less
@@ -42,7 +42,8 @@ a:hover, a.hover {
   background-image: url(../img/hands.png);
   background-size: cover;
   margin-top: -8px;
-  margin-right: 5px;
+  margin-right: 3px;
+  margin-left: 3px;
 }
 
 .i-container {
